Rutas Inversión e Inversionista
POST y GET básicos

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 NODE_ENV=development
-DB_CONNECTION=http://localhost
+MONGODB_CONNECTION_STRING= "mongodb+srv://rodrigoOP:r91C98A98@desarrollosuv-bp8su.mongodb.net/proinvest_db"
+MONGODB_TEST_CONNECTION_STRING= "mongodb+srv://rodrigoOP:r91C98A98@desarrollosuv-bp8su.mongodb.net/proinvest_db_test"
 PORT=7777
 BINDIND_IP=0.0.0.0
