--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API para plataforma Web ProInvest",
   "main": "src/app.js",
   "scripts": {
-    "start" : "nodemon src/app.js", 
+    "start": "nodemon src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "DW",
@@ -13,6 +13,9 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongodb": "^3.4.0",
+    "mongoose": "^5.8.0",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.2"
   }
 }
