--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.3.0",
     "mongodb": "^3.4.0",
     "mongoose": "^5.8.0",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.2",
     "nodemon": "^2.0.2"
   }
 }
